--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "https://ahsannadeem8.github.io"
+url: "https://ahsannadeem8.github.io/ahsannadeem/"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -107,7 +107,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "ahsannadeem8.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "ahsannadeem8.github.io/ahsannadeem/"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
